--- a/fw.html
+++ b/fw.html
@@ -10,7 +10,7 @@
     <table>
         <thead>
             <tr>
-                <th>Файл</th>
+                <th<label>Файл</label></th>
                 <th>Дата</th>
                 <th>Комментарий</th>
                 <th>Branch</th>
