--- a/fw.html
+++ b/fw.html
@@ -24,7 +24,7 @@ fetch('https://itranin.github.io/ui/fw.html')
 
 async function getFWlist() {
     try {
-        const response = await fetch('https://pejeng.tech/api/fw/esp32?raw=true&token=esp32isverycool');
+        const response = await fetch('https://pejeng.tech/api/fw/esp32/?raw=true&token=esp32isverycool',{mode: 'cors'});
         if (!response.ok) {
             throw new Error('Network response was not ok');
         }
@@ -33,7 +33,7 @@ async function getFWlist() {
         jsonData2 = jsonData.reduce((acc, item) => {
                     const { fileName, gitAuthor, gitComment, gitSha, branch, timestampPretty, url } = item;
                     if (!acc[gitSha]) {
-                        acc[gitSha] = { fwUrl: '', fsUrl: '', blUrl: '', date: timestampPretty, comment: gitComment, branch, gitSHA: gitSha, author: gitAuthor };
+                        acc[gitSha] = { fwUrl: '', fsUrl: '', blUrl: '', date: timestampPretty, gitComment, branch, gitSha, gitAuthor };
                     }
                     if (fileName.endsWith('ino.bin')) {
                         acc[gitSha].fwUrl = url;
@@ -47,16 +47,16 @@ async function getFWlist() {
             const data = Object.values(jsonData2).filter(item => item.fwUrl || item.fsUrl || item.blUrl);
                             
             const tableBody = document.querySelector('tbody');
-            tableBody.innerHTML = ''; // Clear existing rows
+            tableBody.innerHTML = '';
             data.forEach(item => {
                 const row = document.createElement('tr');
                 row.innerHTML = `
                     <td><a href="${item.fwUrl}">[FW]</a> <a href="${item.fsUrl}">[FS]</a> <a href="${item.blUrl}">[BL]</a></td>
                     <td>${new Date(item.date).toISOString()}</td>
-                    <td>${item.comment}</td>
+                    <td>${item.gitCcomment}</td>
                     <td>${item.branch}</td>
-                    <td>${item.gitSHA}</td>
-                    <td>${item.author}</td>
+                    <td>${item.gitSha}</td>
+                    <td>${item.gitAuthor}</td>
                 `;
                 tableBody.appendChild(row);
             });
